--- a/.github/workflows/pr-size.yml
+++ b/.github/workflows/pr-size.yml
@@ -9,6 +9,6 @@ jobs:
       - uses: pascalgn/size-label-action@v0.5.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          IGNORED: "package-lock.json"
+          IGNORED: 'package-lock.json'
           SIZES: >
             0:XS,10:S,100:M,500:L,1000:XL,2000:XXL
