--- a/.github/workflows/lhci.yml
+++ b/.github/workflows/lhci.yml
@@ -1,6 +1,6 @@
 name: Lighthouse CI
 on:
-  schedule: [ { cron: "13 5 * * *" } ]
+  schedule: [{ cron: '13 5 * * *' }]
   workflow_dispatch:
 jobs:
   lhci:
@@ -16,4 +16,4 @@ jobs:
           runs: 2
       - name: Gate minimum scores
         run: |
-          echo "Contentful Paint and Best Practices must be > 0.8 (check artifacts)" 
+          echo "Contentful Paint and Best Practices must be > 0.8 (check artifacts)"
