--- a/.github/workflows/repo-doctor.yml
+++ b/.github/workflows/repo-doctor.yml
@@ -1,7 +1,7 @@
 name: Repo Doctor
 on:
   workflow_dispatch:
-  schedule: [ { cron: "37 4 * * *" } ] # daily 04:37 UTC
+  schedule: [{ cron: '37 4 * * *' }] # daily 04:37 UTC
 jobs:
   doctor:
     runs-on: ubuntu-latest
