--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,7 +1,7 @@
 name: Mark stale issues and PRs
 on:
   schedule:
-    - cron: "17 6 * * *" # daily 06:17 UTC
+    - cron: '17 6 * * *' # daily 06:17 UTC
 permissions:
   issues: write
   pull-requests: write
@@ -13,10 +13,10 @@ jobs:
         with:
           days-before-stale: 30
           days-before-close: 7
-          stale-issue-label: "stale"
-          stale-pr-label: "stale"
-          exempt-issue-labels: "pinned,security"
-          exempt-pr-labels: "work-in-progress"
+          stale-issue-label: 'stale'
+          stale-pr-label: 'stale'
+          exempt-issue-labels: 'pinned,security'
+          exempt-pr-labels: 'work-in-progress'
           stale-issue-message: >
             This issue has been automatically marked as stale due to inactivity.
             It will be closed if no further activity occurs.
