--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "devDependencies": {
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.3.3",
     "husky": "^9.1.5",
-    "lint-staged": "^15.2.8"
+    "lint-staged": "^15.2.8",
+    "prettier": "^3.3.3"
   },
   "scripts": {
     "prepare": "husky install",
-    "format": "prettier -w \"apps/**/*.html\"",
-    "lint": "eslint --ext .js,.mjs,.cjs . || true"
+    "lint": "eslint . --ext .js,.mjs,.cjs",
+    "format": "prettier -w ."
   },
   "lint-staged": {
-    "apps/**/*.html": ["prettier -w"],
-    "*.js": ["eslint --fix", "prettier -w"]
+    "**/*.{js,mjs,cjs,html,css,md,yml,yaml,json}": [
+      "prettier -w"
+    ]
   }
 }
