--- a/.github/workflows/html-validate.yml
+++ b/.github/workflows/html-validate.yml
@@ -1,14 +1,20 @@
 name: HTML Validate
 on:
   pull_request:
+  workflow_dispatch:
+permissions: { contents: read }
 jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Validate HTML
-        uses: Cyb3r-Jak3e/html5validator-action@v7
-        with:
-          root: .
-          paths: apps/quantum/ternary_consciousness_v3.html
-          blacklist: node_modules
+      - id: chk
+        run: |
+          f="apps/quantum/ternary_consciousness_v3.html"
+          [ -f "$f" ] && echo "ok=1" >> $GITHUB_OUTPUT || echo "ok=0" >> $GITHUB_OUTPUT
+      - uses: Cyb3r-Jak3/html5validator-action@v7
+        if: steps.chk.outputs.ok == '1'
+        with: { root: ., paths: apps/quantum/ternary_consciousness_v3.html, blacklist: node_modules }
+      - run: echo "ℹ️ HTML file missing, skipping." >> $GITHUB_STEP_SUMMARY
+        if: steps.chk.outputs.ok != '1'
+
