--- a/.github/workflows/ossf-scorecard.yml
+++ b/.github/workflows/ossf-scorecard.yml
@@ -1,20 +1,18 @@
 name: OSSF Scorecard
 on:
-  pull_request:
-  push:
-    branches: [main]
-  schedule:
-    - cron: '0 8 * * 1' # Mondays
+  push: { branches: [ main ] }
+  schedule: [ { cron: "0 8 * * 1" } ]
+  workflow_dispatch:
 permissions:
+  actions: read
+  contents: read
   security-events: write
   id-token: write
-  contents: read
 jobs:
   analysis:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: ossf/scorecard-action@v2.4.0
+      - uses: ossf/scorecard-action@v2.3.3
         with:
           results_file: results.sarif
           results_format: sarif
@@ -22,3 +20,4 @@ jobs:
       - uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: results.sarif
+
