--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -2,7 +2,7 @@ name: Super-Linter
 on:
   pull_request:
   push:
-    branches: [main]
+    branches: [ main ]
 permissions:
   contents: read
 jobs:
@@ -11,14 +11,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with: { fetch-depth: 0 }
-      - name: Run Super-Linter
-        uses: github/super-linter/slim@v6
+      - uses: github/super-linter/slim@v6
         env:
           DEFAULT_BRANCH: main
           VALIDATE_ALL_CODEBASE: true
           LOG_LEVEL: warn
-          FILTER_REGEX_EXCLUDE: "node_modules/|\\.husky/"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          FILTER_REGEX_EXCLUDE: "node_modules/|\\.husky/|dist/|build/"
+          VALIDATE_JAVASCRIPT_STANDARD: false
+          VALIDATE_JAVASCRIPT_ES: true
+          VALIDATE_TYPESCRIPT_ES: false
           VALIDATE_MARKDOWN: true
           VALIDATE_HTML: true
           VALIDATE_YAML: true
           VALIDATE_JSON: true
+
