--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,1 @@
-{ "printWidth": 100, "singleQuote": true, "trailingComma": "es5", "arrowParens": "always" }
+{ "printWidth": 100, "singleQuote": true, "trailingComma": "es5" }
