--- a/.github/workflows/auto-heal.yml
+++ b/.github/workflows/auto-heal.yml
@@ -27,42 +27,40 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          # use bot creds for pushing later
           persist-credentials: false
           ref: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_branch || github.ref }}
 
-      - name: Configure git author (bot)
+      - name: Set bot identity
         run: |
           git config user.name  "${{ secrets.BOT_USER || 'blackroad-bot' }}"
           git config user.email "${{ secrets.BOT_USER || 'blackroad-bot' }}@users.noreply.github.com"
 
-      - name: Run auto-heal
+      - name: Run fixer
         id: heal
         run: .github/tools/autoheal.sh
 
-      - name: Push changes (if any)
+      - name: Push fixes (if any)
         if: steps.heal.outputs.committed == '1'
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
         run: |
           if [ -z "$BOT_TOKEN" ]; then
-            echo "::warning::No BOT_TOKEN secret; cannot push fixes."
+            echo "::warning::No BOT_TOKEN secret; cannot push auto-heal changes."
             exit 0
           fi
-          CURRENT_BRANCH="$(git rev-parse --abbrev-ref HEAD)"
-          git push "https://${BOT_TOKEN}@github.com/${{ github.repository }}.git" "HEAD:${CURRENT_BRANCH}"
+          BRANCH="$(git rev-parse --abbrev-ref HEAD)"
+          git push "https://${BOT_TOKEN}@github.com/${{ github.repository }}.git" "HEAD:${BRANCH}"
 
-      - name: Comment on PR with summary
+      - name: PR comment summary (if PR)
         if: github.event_name == 'pull_request'
         uses: actions/github-script@v7
         with:
           script: |
-            const committed = core.getInput('committed', { required: false }) || process.env.COMMITTED;
-            const body = `🤖 Auto-Heal ran.
-- Commit made: **${{ steps.heal.outputs.committed == '1' && 'yes' || 'no' }}**
-- If it was missing, I created: package.json, eslint.config.js, .prettierrc.json, .editorconfig, CodeQL config, and a placeholder HTML at apps/quantum/ternary_consciousness_v3.html.
-- I also ran Prettier + ESLint --fix.`;
-            const pr = context.payload.pull_request;
-            if (pr) {
-              await github.issues.createComment({ owner: context.repo.owner, repo: context.repo.repo, issue_number: pr.number, body });
-            }
+            const committed = `${{ steps.heal.outputs.committed }}` === '1';
+            const body = committed
+              ? "🤖 Auto-Heal committed fixes (configs, placeholder HTML, lint/format)."
+              : "✅ Auto-Heal found nothing to change.";
+            await github.issues.createComment({
+              owner: context.repo.owner, repo: context.repo.repo,
+              issue_number: context.payload.pull_request.number, body
+            })
