--- a/.github/workflows/auto-heal.yml
+++ b/.github/workflows/auto-heal.yml
@@ -1,7 +1,7 @@
-name: Auto-Heal (create/fix & push)
+name: "Auto-Heal (create/fix & push)"
 on:
-  pull_request:
-  workflow_dispatch:
+  pull_request: {}
+  workflow_dispatch: {}
   # Heal after failures from these workflows:
   workflow_run:
     workflows:
