--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,23 +1,18 @@
-name: Auto Merge (label-driven)
+name: Auto-merge safe PRs
 on:
   pull_request:
-    types: [labeled, synchronize, reopened, ready_for_review]
-  check_suite:
-    types: [completed]
-permissions: { contents: write, pull-requests: write }
+    types: [labeled, opened, synchronize]
+permissions:
+  pull-requests: write
+  contents: write
 jobs:
-  merge:
-    if: github.event_name == 'check_suite' || contains(github.event.pull_request.labels.*.name, 'automerge')
+  automerge:
     runs-on: ubuntu-latest
+    if: contains(github.event.pull_request.labels.*.name, 'automerge') || contains(github.event.pull_request.labels.*.name, 'docs')
     steps:
-      - uses: actions/github-script@v7
-        with:
-          script: |
-            const {owner,repo} = context.repo;
-            const pr = context.payload.pull_request || (await github.search.issuesAndPullRequests({q:`repo:${owner}/${repo} is:pr is:open label:automerge` })).data.items[0];
-            if (!pr) return;
-            const num = pr.number || pr;
-            const checks = await github.checks.listForRef({owner,repo,ref: pr.head.sha});
-            const allGreen = checks.data.check_runs.every(c=>['success','skipped','neutral'].includes(c.conclusion||''));
-            if (!allGreen) return;
-            try { await github.pulls.merge({owner,repo,pull_number:num,merge_method:'squash'}); } catch(e){}
+      - uses: pascalgn/automerge-action@v0.16.3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MERGE_METHOD: squash
+          MERGE_DELETE_BRANCH: true
+          UPDATE_METHOD: rebase
