--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -1,8 +1,9 @@
 name: Broken Links
 on:
   pull_request:
-  schedule: [ { cron: "0 2 * * *" } ]
-permissions: { contents: read }
+  schedule: [{ cron: '0 2 * * *' }]
+permissions:
+  contents: read
 jobs:
   lychee:
     runs-on: ubuntu-latest
@@ -16,7 +17,7 @@ jobs:
         if: steps.chk.outputs.ok == '1'
         with:
           args: --verbose --no-progress --max-concurrency 8 --retry-wait-time 2 --timeout 20s "apps/quantum/ternary_consciousness_v3.html"
-        env: { GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} }
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: echo "ℹ️ Link check skipped (no HTML file)." >> $GITHUB_STEP_SUMMARY
         if: steps.chk.outputs.ok != '1'
-
