feat: add staging deploy and site checks

--- a/.github/workflows/auto-labeler.yml
+++ b/.github/workflows/auto-labeler.yml
@@ -6,4 +6,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/labeler@v5
-        with: { repo-token: "${{ secrets.GITHUB_TOKEN }}", configuration-path: ".github/labeler.yml" }
+        with:
+          { repo-token: '${{ secrets.GITHUB_TOKEN }}', configuration-path: '.github/labeler.yml' }
