--- a/.github/workflows/flags.yml
+++ b/.github/workflows/flags.yml
@@ -3,13 +3,13 @@ on:
   workflow_call:
     outputs:
       ai_tools:
-        description: "ai_tools flag"
+        description: 'ai_tools flag'
         value: ${{ jobs.flags.outputs.ai_tools }}
       security_scans:
-        description: "security_scans flag"
+        description: 'security_scans flag'
         value: ${{ jobs.flags.outputs.security_scans }}
       heavy_linters:
-        description: "heavy_linters flag"
+        description: 'heavy_linters flag'
         value: ${{ jobs.flags.outputs.heavy_linters }}
 jobs:
   flags:
