--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -1,29 +1,23 @@
-name: Accessibility (axe advisory)
+name: Accessibility + SEO (advisory)
 on:
   pull_request:
-  workflow_dispatch: {}
+    paths: ['sites/blackroad/**']
+  workflow_dispatch:
 permissions: { contents: read }
 jobs:
-  axe:
+  checks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: 20 }
-      - name: Prepare HTML
-        run: |
-          if [ -d sites/blackroad ]; then
-            cd sites/blackroad && npm ci --omit=optional || npm i --package-lock-only
-            npm run build
-          else
-            echo "No site; skipping build." >> $GITHUB_STEP_SUMMARY
-          fi
-      - name: Run axe
-        if: ${{ hashFiles('sites/blackroad/dist/**') != '' }}
-        run: |
-          node .github/tools/webperf/axe-check.js || true
+      - run: |
+          cd sites/blackroad
+          npm ci --omit=optional || npm i --package-lock-only
+          npm i -D @axe-core/cli lighthouse
+          npm run build
+          npx http-server dist -p 4179 -s & sleep 2
+          npx axe http://127.0.0.1:4179 --exit 0 || true
+          npx lighthouse http://127.0.0.1:4179 --preset=desktop --quiet --chrome-flags="--headless" --output html --output-path ../artifacts/lh.html || true
       - uses: actions/upload-artifact@v4
-        if: ${{ hashFiles('sites/blackroad/dist/**') != '' }}
-        with:
-          name: axe-report
-          path: artifacts/axe-report.json
+        with: { name: a11y-seo, path: sites/blackroad/artifacts/** }
