--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,7 +1,7 @@
 name: CodeQL
 on:
-  push: { branches: [ main ] }
-  pull_request: { branches: [ main ] }
+  push: { branches: [main] }
+  pull_request: { branches: [main] }
 permissions:
   security-events: write
   contents: read
@@ -9,7 +9,7 @@ jobs:
   analyze:
     runs-on: ubuntu-latest
     strategy:
-      matrix: { language: [ 'javascript' ] }
+      matrix: { language: ['javascript'] }
     steps:
       - uses: actions/checkout@v4
       - uses: github/codeql-action/init@v3
@@ -19,5 +19,4 @@ jobs:
           config-file: ./.github/codeql/config.yml
           queries: security-and-quality
       - uses: github/codeql-action/analyze@v3
-        with: { category: "/language:${{ matrix.language }}" }
-
+        with: { category: '/language:${{ matrix.language }}' }
