--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,8 +1,11 @@
-name: Playwright Smoke (skip-safe)
+name: E2E — Playwright (routes + screenshots)
 on:
   pull_request:
-  workflow_dispatch: {}
-permissions: { contents: read }
+    paths: ['sites/blackroad/**']
+  workflow_dispatch:
+permissions:
+  contents: read
+  pull-requests: write
 jobs:
   e2e:
     runs-on: ubuntu-latest
@@ -10,19 +13,28 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: 20 }
-      - name: Install & build site
+      - name: Install site & Playwright
         run: |
-          if [ -d sites/blackroad ]; then
-            cd sites/blackroad && npm ci --omit=optional || npm i --package-lock-only
-            npm run build
-          else
-            echo "No site; skipping." >> $GITHUB_STEP_SUMMARY
-          fi
-      - name: Run Playwright in preview (if site)
-        if: ${{ hashFiles('sites/blackroad/dist/**') != '' }}
-        uses: microsoft/playwright-github-action@v1
-      - name: Execute smoke test
-        if: ${{ hashFiles('sites/blackroad/dist/**') != '' }}
+          cd sites/blackroad
+          npm ci --omit=optional || npm i --package-lock-only
+          npm i -D @playwright/test@1
+          npx playwright install --with-deps
+      - name: Build site
+        run: cd sites/blackroad && npm run build
+      - name: Serve & test
+        working-directory: sites/blackroad
         run: |
-          npx --yes playwright install --with-deps || true
-          node -e "console.log('smoke ok')" || true
+          npx http-server dist -p 4178 -s & sleep 2
+          npx playwright test
+      - name: Upload E2E artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: e2e-artifacts
+          path: sites/blackroad/test-results/**
+      - name: Comment summary
+        if: always() && github.event.pull_request.number
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.issues.createComment({owner: context.repo.owner, repo: context.repo.repo, issue_number: context.payload.pull_request.number, body: "✅ Playwright ran. See **e2e-artifacts** for screenshots/videos."});
