--- a/.github/workflows/security-pack.yml
+++ b/.github/workflows/security-pack.yml
@@ -1,7 +1,7 @@
 name: Security Pack (flag-aware)
 on:
   pull_request:
-  schedule: [ { cron: "0 6 * * 1" } ]
+  schedule: [{ cron: '0 6 * * 1' }]
 permissions: { contents: read, security-events: write }
 jobs:
   flags:
