--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,6 +1,6 @@
-name: Stale (soft)
+name: Stale Issues/PRs
 on:
-  schedule: [ { cron: "0 9 * * 1-5" } ]
+  schedule: [{ cron: '0 8 * * *' }]
 permissions: { issues: write, pull-requests: write }
 jobs:
   stale:
@@ -8,13 +8,8 @@ jobs:
     steps:
       - uses: actions/stale@v9
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          days-before-issue-stale: 45
-          days-before-pr-stale: 30
-          days-before-close: -1
-          exempt-issue-labels: pinned,security
-          exempt-pr-labels: work-in-progress,do-not-close
-          stale-issue-label: stale
-          stale-pr-label: stale
-          stale-issue-message: "This issue is getting a little dusty — comment to keep it fresh ✨"
-          stale-pr-message: "This PR is stale — push commits or comment to keep it active."
+          days-before-stale: 30
+          days-before-close: 14
+          stale-issue-label: 'stale'
+          stale-pr-label: 'stale'
+          exempt-issue-labels: 'security'
