--- a/sites/blackroad/package.json
+++ b/sites/blackroad/package.json
@@ -1,25 +1,38 @@
 {
   "name": "blackroad-site",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.3.0",
   "type": "module",
   "scripts": {
+    "prebuild": "node ./scripts/build-docs.cjs && node ./scripts/build-blog.cjs",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "format": "prettier -w ."
+    "format": "prettier -w .",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx || true",
+    "e2e": "playwright test || true"
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
+    "@axe-core/cli": "^4.10.0",
+    "@playwright/test": "^1.47.0",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
     "eslint": "^9.9.0",
+    "gray-matter": "^4.0.3",
+    "husky": "^9.1.5",
+    "marked": "^12.0.2",
+    "monaco-editor": "^0.49.0",
+    "size-limit": "^11.1.5",
+    "@size-limit/file": "^11.1.5",
+    "vite": "^5.4.2",
+    "@eslint/js": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.10",
-    "vite": "^5.4.2"
+    "tailwindcss": "^3.4.10"
   }
 }
