chore: add foundational governance and CI setup

--- a/.github/workflows/deploy-blackroad.yml
+++ b/.github/workflows/deploy-blackroad.yml
@@ -1,14 +1,10 @@
-name: Deploy blackroad.io (GitHub Pages)
+name: Deploy blackroad.io (Pages, main)
 on:
   push:
     branches: [ main ]
-    paths:
-      - 'sites/blackroad/**'
-  workflow_dispatch: {}
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+    paths: [ 'sites/blackroad/**' ]
+  workflow_dispatch:
+permissions: { contents: read, pages: write, id-token: write }
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,17 +12,17 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: 20 }
-      - run: cd sites/blackroad && npm ci --omit=optional || npm i --package-lock-only
-      - run: cd sites/blackroad && npm run build
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - run: |
+          cd sites/blackroad
+          npm ci --omit=optional || npm i --package-lock-only
+          echo "prod" > public/_env
+          npm run build
+          cp dist/index.html dist/404.html
+      - uses: actions/upload-pages-artifact@v3
         with: { path: sites/blackroad/dist }
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+    environment: github-pages
     steps:
-      - id: deployment
-        uses: actions/deploy-pages@v4
+      - uses: actions/deploy-pages@v4
