--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,18 +1,17 @@
 name: Release Please
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
-  workflow_dispatch:
 permissions:
   contents: write
   pull-requests: write
 jobs:
-  release-please:
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: google-github-actions/release-please-action@v4
         with:
-          release-type: simple
-          bump-minor-pre-major: true
-          changelog-types: '[{"type":"feat","section":"Features"},{"type":"fix","section":"Bug Fixes"},{"type":"chore","section":"Chores","hidden":false}]'
-
+          token: ${{ secrets.GITHUB_TOKEN }}
+          config-file: .github/release-please-config.json
+          manifest-file: .github/.release-please-manifest.json
