--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -1,26 +1,22 @@
 name: Super-Linter (flag-aware)
-on: { pull_request: {}, push: {} }
-permissions: { contents: read }
+on:
+  pull_request:
+  workflow_dispatch:
+permissions: { contents: read, statuses: write }
 jobs:
-  flags:
-    uses: ./.github/workflows/flags.yml
   lint:
-    needs: flags
-    if: needs.flags.outputs.heavy_linters == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
-      - uses: github/super-linter/slim@v6
+      - name: Read flags
+        id: flags
+        run: |
+          heavy=$(grep -E '^heavy_linters:' .github/feature-flags.yml | awk '{print $2}')
+          echo "heavy=${heavy:-false}" >> $GITHUB_OUTPUT
+      - name: Run Super-Linter (advisory if not heavy)
+        uses: super-linter/super-linter@v7
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BRANCH: main
-          VALIDATE_ALL_CODEBASE: true
-          LOG_LEVEL: warn
-          FILTER_REGEX_EXCLUDE: "node_modules/|dist/|build/"
-          VALIDATE_MARKDOWN: true
-          VALIDATE_YAML: true
-          VALIDATE_JSON: true
-          VALIDATE_JAVASCRIPT_ES: true
-          VALIDATE_TYPESCRIPT: false
-          VALIDATE_HTML: true
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VALIDATE_ALL_CODEBASE: false
+        continue-on-error: ${{ steps.flags.outputs.heavy != 'true' }}
