chore(ci): install self-healing agents (labeler, autofix, codeql, dependabot, triage, cleanup, title-lint)
Signed-off-by: BlackRoad Bot <bot@blackroad.io>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,5 @@
-*       @blackroad-owners
-/sites/blackroad/**  @blackroad-web
-.github/**           @blackroad-ci
+/sites/blackroad/     @blackboxprogramming
+/api/                 @blackboxprogramming
+/services/            @blackboxprogramming
+/**/*.py              @blackboxprogramming
+/**/*.ts              @blackboxprogramming
