--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,7 @@
-*       @blackroad-owners
-/sites/blackroad/**  @blackroad-web
-.github/**           @blackroad-ci
+# Path-based reviewers
+/sites/blackroad/     @blackboxprogramming
+/api/                 @blackboxprogramming
+/services/            @blackboxprogramming
+/**/*.py              @blackboxprogramming
+/**/*.ts              @blackboxprogramming
+
