--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,4 +16,7 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["types.d.ts", "src/**/*.ts", "app/**/*", "lib/**/*"]
+    "forceConsistentCasingInFileNames": true
+  },
+  "include": ["types.d.ts"]
 }
