--- a/nginx/conf.d/lucidia-sites.conf
+++ b/nginx/conf.d/lucidia-sites.conf
@@ -37,6 +37,14 @@ server {
   add_header Referrer-Policy "strict-origin-when-cross-origin" always;
   add_header X-XSS-Protection "1; mode=block" always;
 
+  location /api/chat {
+    proxy_pass http://127.0.0.1:3000;
+    proxy_http_version 1.1;
+    proxy_set_header Connection "";
+    proxy_buffering off;
+    proxy_cache off;
+  }
+
   location /api/ {
     limit_req zone=api burst=20 nodelay;
     proxy_pass http://blackroad_app;
@@ -86,6 +94,14 @@ server {
   add_header X-Content-Type-Options "nosniff" always;
   add_header Referrer-Policy "strict-origin-when-cross-origin" always;
   add_header X-XSS-Protection "1; mode=block" always;
+
+  location /api/chat {
+    proxy_pass http://127.0.0.1:3000;
+    proxy_http_version 1.1;
+    proxy_set_header Connection "";
+    proxy_buffering off;
+    proxy_cache off;
+  }
 
   location /api/ {
     limit_req zone=api burst=20 nodelay;
