chore: refine env and docs

--- a/srv/blackroads/elt/.env.example
+++ b/srv/blackroads/elt/.env.example
@@ -3,6 +3,11 @@ POSTGRES_DB=blackroads
 POSTGRES_USER=blackroads
 POSTGRES_PASSWORD_FILE=/run/secrets/postgres_password
 POSTGRES_PORT=5432
+DBT_HOST=blackroads-postgres
+DBT_DB=blackroads
+DBT_USER=blackroads
+DBT_PASSWORD_FILE=/run/secrets/postgres_password
+DBT_PORT=5432
 PREFECT_API_URL=http://blackroads-prefect:4200/api
 TZ=America/Chicago
 BLACKROADS_DOMAIN=blackroad.io
