chore: add mirror scaffolding and index workflow

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,1 @@
-/sites/blackroad/     @blackboxprogramming
-/api/                 @blackboxprogramming
-/services/            @blackboxprogramming
-/**/*.py              @blackboxprogramming
-/**/*.ts              @blackboxprogramming
+* @blackboxprogramming/maintainers
