--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,17 +1,11 @@
-name: Security • CodeQL
-
+name: CodeQL
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   pull_request:
-    branches: [main]
+    branches: [ main ]
   schedule:
-    - cron: '0 3 * * 1'
-
-permissions:
-  contents: read
-  security-events: write
-
+    - cron: "0 3 * * 1"
 jobs:
   analyze:
     runs-on: ubuntu-latest
@@ -20,18 +14,11 @@ jobs:
       contents: read
       security-events: write
     strategy:
-      fail-fast: false
       matrix:
-        language: ['javascript', 'python']
+        language: [ "javascript" ]
     steps:
       - uses: actions/checkout@v4
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+      - uses: github/codeql-action/init@v3
         with:
           languages: ${{ matrix.language }}
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-      - name: Analyze
-        uses: github/codeql-action/analyze@v3
-        with:
-          category: "/language:${{ matrix.language }}"
+      - uses: github/codeql-action/analyze@v3
