--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -1,22 +1,10 @@
-name: Gitleaks (secrets)
+name: Secret Scan (Gitleaks)
 on: [push, pull_request]
-permissions: { contents: read }
-name: gitleaks
-on:
-  push:
-    paths: ["droplet-manager-macos/**"]
-  pull_request:
-    paths: ["droplet-manager-macos/**"]
-
 jobs:
-  scan:
+  gitleaks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
       - uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - uses: gitleaks/gitleaks-action@v2
-        with:
-          config: .gitleaks.toml
