--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,29 +1,19 @@
-name: Mark stale issues and PRs
+name: Stale Issues
 on:
-  schedule: [{ cron: "0 3 * * *" }]
-
+  schedule:
+    - cron: "0 9 * * 1"
 permissions:
   issues: write
   pull-requests: write
-
-name: Stale Issues/PRs
-on:
-  schedule: [{ cron: '0 8 * * *' }]
-permissions: { issues: write, pull-requests: write }
 jobs:
   stale:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/stale@v9
         with:
-          days-before-stale: 30
+          days-before-stale: 21
           days-before-close: 7
-          stale-issue-message: "This issue is stale due to inactivity. It will auto-close in 7 days."
-          stale-pr-message: "This PR is stale due to inactivity. It will auto-close in 7 days."
-          exempt-issue-labels: "security,blocked"
-          exempt-pr-labels: "security,blocked"
-
-          days-before-close: 14
-          stale-issue-label: 'stale'
-          stale-pr-label: 'stale'
-          exempt-issue-labels: 'security'
+          stale-issue-message: "This issue has been quiet for 3 weeks; please update or it may close."
+          stale-pr-message: "PR inactive; please update or it may close."
+          exempt-issue-labels: "pinned,keep"
+          exempt-pr-labels: "pinned,keep"
