test: allow ts requires in lucidia brain tests

--- a/srv/blackroad-api/.env.example
+++ b/srv/blackroad-api/.env.example
@@ -1,3 +1,6 @@
 PORT=4000
 DB_PATH=/srv/blackroad-api/blackroad.db
 LLM_URL=http://127.0.0.1:8000
+ENABLE_LUCIDIA_BRAIN=1
+FLAG_ALLOW_FTS_FALLBACK=0
+LUCIDIA_PSSHA_SEED=
