feat(agents): add 50+ extended Prism agents across science, AI, finance, creative, and ops domains
- Added new agent families
- Integrated with /prism FS (agents, logs, contradictions)
- Updated prismsh with spawn/kill all
- Added mega-agent test suite

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dev:site": "npm --prefix sites/blackroad run dev",
     "build": "npm --prefix sites/blackroad run build",
     "test": "node tests/smoke.test.mjs",
+    "test-agents-pack": "node tests/test_agents_mega.js",
     "frontend:dev": "npm --prefix sites/blackroad run dev",
     "frontend:build": "npm --prefix sites/blackroad run build",
     "fix-anything": "node .github/tools/codex-apply.js .github/prompts/codex-fix-anything.md || true"
