feat(agents): add novelty & humanistic agents (love, curious, consent, creativity, math, art, poetry, dream, paradox, oracle, etc.)\n\n- Each agent has manifest + IPC loop\n- Integrated with /prism FS (logs, contradictions)\n- Added prismsh commands for novelty agents\n- Added test suite for novelty responses

--- a/package.json
+++ b/package.json
@@ -12,12 +12,9 @@
     "prepare": "husky",
     "lint": "eslint . --ext .js,.jsx,.mjs,.cjs || true",
     "format": "prettier -w .",
-    "test": "node tests/smoke.test.mjs && node --test tests/backend-validation.test.js",
-    "test": "node tests/test_auth.js && node tests/smoke.test.mjs",
-    "test": "jest --coverage",
+    "test": "node tests/smoke.test.mjs && node tests/test_agents_novelty.js",
     "dev:site": "npm --prefix sites/blackroad run dev",
     "build": "npm --prefix sites/blackroad run build",
-    "test": "node tests/smoke.test.mjs",
     "frontend:dev": "npm --prefix sites/blackroad run dev",
     "frontend:build": "npm --prefix sites/blackroad run build",
     "fix-anything": "node .github/tools/codex-apply.js .github/prompts/codex-fix-anything.md || true"
