--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,15 +31,15 @@ repos:
     hooks:
       - id: black
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.3.3
+    rev: v3.1.0
     hooks:
       - id: prettier
-        additional_dependencies: ["prettier@^3"]
+        additional_dependencies: ['prettier@^3']
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v9.12.0
     hooks:
       - id: eslint
-        args: ["--fix"]
+        args: ['--fix']
         files: "\\.(js|jsx|ts|tsx)$"
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
@@ -47,4 +47,3 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
-        additional_dependencies: ['prettier@3.3.3']
