--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "node server_full.js",
     "dev": "nodemon server_full.js",
-    "seed": "node scripts/seed_admin.js"
+    "seed": "node scripts/seed_admin.js",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "engines": {
     "node": ">=18.17"
